fix index.css that unable scroll on small screen

--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,8 @@ code {
 }
 
 #root {
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    min-width: 100vw;
     background-position: left top;
     background-size: auto;
     background-repeat: repeat;
